[package]
name = "dabney_engineering"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = "0.7"
log = "0.4"
gloo-net = "0.5"
console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Event",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
